style.css
html {
  background: linear-gradient(to bottom, white, rgb(203, 202, 217));
  font-family: 'Open Sans', sans-serif;
}

a:link {
  text-decoration: none;
  color: rgb(64, 37, 226);
}

a:visited {
  color: rgb(232, 44, 219);
}

a:hover {
  color: red;
  font-style: italic;
}

.header-each-page {
  background: linear-gradient(to bottom, rgb(127, 179, 247), rgb(240, 243, 247));
  border: 1px dotted red; /* temp */
}

.header-each-page h1 {
  text-align: center;
  font-size: 60px;
  padding-top: 20px;
  font-weight: bold;
}

.nav-bar {
  float: right;
  display: inline-block;
  margin-top: 20px;
  border: 1px dotted red; /* temp */
}

.nav-bar-list {
  list-style-type: none;
  margin-top: 80px;
}

.nav-bar-list > li {
  display: inline-block;
  margin: 15px;
  padding: 5px;
}

.nav-bar-list > li:hover {
  border: 1px solid rgb(73, 82, 70);
  border-radius: 5px;
  background-color: white;
}

.nav-bar-list li a {
  text-transform: uppercase;
  color: black;
  font-size: 22px;
}

.nav-bar-list li a:hover {
  font-style: normal !important;
  color: rgb(32, 40, 148);
}

.nav-bar-list li a:visited {
  color: rgb(64, 75, 75);
}

.nav-bar-list-selected {
  border: 1px solid rgb(73, 82, 70);
  border-radius: 5px;
  background-color: white;
}

.header-photo {
  max-height: 250px;
  max-width: 250px;
  margin-left: 50px;
  margin-top: 20px;
}

#mission {
  font-style: italic;
  font-size: 24px;
  width: 600px;
  text-align: center;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 60px;
  margin-bottom: 60px;
}

/* #resume-img {
  max-height: 100px;
} Code is currently in parking lot */

/* ** Need to figure out how to make the resume icon appear to the right of paragraph, presumably by using float */

.main-article-half-width p {
  max-width: 400px;
  padding: 10px;
}

.main-article-half-width h3, h4 {
  text-align: center;
}

.main-article-half-width h3 {
  font-weight: bold;
  font-size: 30px;
  padding: 10px 0px;
}

.main-article-half-width h4 {
  font-size: 22px;
  padding: 20px 0px 30px 0px;
}

.main-article-half-width img {
  height: 150px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.proj1 {
  margin-right: 20px;
}

.proj2 {
  margin-left: 20px;
}

.proj1, .proj2 {
  display: inline-block;
  width: 300px;
  border: 1px solid rgb(73, 82, 70);
  border-radius: 5px;
}

.two-article-control {
  position: relative;
  margin: auto;
  margin-bottom: 35px;
  width: 800px;
  height: 600px;
  padding: 40px;
  display: flex;
  justify-content: center;
  border: 1px dotted red;  /*temp */
}

.proj-btn {
  clear: both;
  display: block;
  margin: auto;
  margin-bottom: 50px;
  width: 200px;
  padding: 15px;
  border-radius: 30px;
  background-color: rgb(228, 226, 237);
  font-size: 20px;
}

.proj-btn:hover {
  background-color: rgb(30, 20, 219);
  color: white;
  cursor: pointer;
}

.page-lower-section {
  position: absolute;
  left: 20px;
  border: 1px solid rgb(73, 82, 70);
  border-radius: 5px;
  max-width: 500px;
  margin: 30px 0px 30px 0px;
}

.page-lower-section h3 {
  text-align: center;
  font-weight: bold;
  font-size: 30px;
  padding: 10px 0px;
}

.page-lower-section p {
  padding: 10px;
}

#fig-main {
  position: absolute;
  right: 20px;
  margin: 30px 0px;
}

#fig-main figcaption {
  text-align: center;
  font-style: italic;
  font-size: 20px;
  padding: 10px;
}

.bottom-elements-control {
  margin: auto;
  margin-bottom: 40px;
  position: relative;
  width: 900px;
  border: 1px dotted red;  /* temp */
  height: 400px;
}

#book-img {
  height: 300px;
}

.footer-each-page {
  clear: both;
  text-align: center;
  border: 1px solid rgb(73, 82, 70);
  border-radius: 5px;
  padding: 10px 0px 10px 0px;
  background-color: rgb(240, 236, 228);
}

.footer-each-page img {
  height: 40px;
  width: 40px;
  padding: 0px 60px;
}

.project-page-headline h2, .bio-page-headline h2, .proj-menu-master-container h2 {
  text-align: center;
  font-size: 50px;
  padding-bottom: 20px;
}

.project-page-headline img, .bio-page-headline img {
  height: 80px;
  width: 80px;
  position: relative;
  display: block;
  margin: 20px auto;
}

.project-page-section, .bio-page-section {
  border: 1px solid rgb(73, 82, 70);
  border-radius: 5px;
  margin: 50px 50px;
}

.project-page-section h3, .bio-page-section h3 {
  text-align: center;
  font-weight: bold;
  font-size: 30px;
  padding: 20px 0px;
}

.bio-page-section h3 {
  padding-bottom: 40px;
}

.project-page-section img {
  height: 200px;
  margin: 0px 0px 30px 20px;
}

.project-page-section p {
  float: right;
  width: 400px;
}

.bio-page-headline p {
  text-align: center;
  padding-bottom: 30px;
}

.bio-page-section span {
  font-weight: bold;
}

.bio-page-section p {
  padding: 0px 0px 10px 10px;
  text-align: center;
}

.for-more-info {
  font-style: italic;
}

.proj-menu-master-container {
  margin: auto;
  width: 960px;
  margin-bottom: 50px;
  margin-top: 50px;
  text-align: center;
  border: 1px dotted red; /* test */
}

.proj-menu-indiv-box {
  height: 250px;
  width: 250px;
  display: inline-block;
  margin-left: 20px;
  margin-right: 20px;
}

.proj-menu-indiv-box img {
  height: 200px;
  width: 200px;
}

.proj-menu-indiv-box p {
  position: relative;
  left: 25px;
  margin-top: 10px;
  font-weight: bold;
  font-style: italic;
  font-size: 20px;
}

